# tasso-barcode-generator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
static/: sample.csv
tasso_barcode_generator/: __init__.py  __main__.py
templates/: index.html
