[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasso-barcode-generator"
version = "1.0.2"
description = "Generate barcode sticker sheets for Tasso blood collection devices"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ARQ Team"},
]
keywords = ["barcode", "tasso", "medical", "stickers", "avery", "pdf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "reportlab>=4.0.0",
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
]

[project.scripts]
tasso-barcode-generator = "tasso_barcode_generator:main"

[project.urls]
Homepage = "https://github.com/arq/tasso-barcode-generator"
Documentation = "https://github.com/arq/tasso-barcode-generator#readme"
Repository = "https://github.com/arq/tasso-barcode-generator.git"
Issues = "https://github.com/arq/tasso-barcode-generator/issues"

[tool.hatch.build.targets.wheel]
packages = ["tasso_barcode_generator"]
